kustomize/confluent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluent-ingress
  namespace: confluent
  annotations:

    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: confluent.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlcenter
            port:
              name: external
